<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team1TravelExpenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="travel_claims">Travel Claims</string>
    <string name="add_claim">(+)</string>
    <string name="add_expense">(+)</string>
    <string name="delete_claims">(-)</string>
    <string name="delete_expenses">(-)</string>
    <string name="title_activity_expenses_list">ExpensesListActivity</string>
    <string name="title_activity_expense_edit">ExpenseEditActivity</string>
    <string name="title_activity_new_claim">NewClaimActivity</string>
    <string name="description_of_claim">Claim Description</string>
    <string name="edit">Edit Claim</string>

    <string-array name="tags"></string-array>
    <string-array name="expense_categories">
        <item>none</item>
        <item>air fare</item>
        <item>ground transport</item>
        <item>vehicle rental</item>
        <item>private automobile</item>
        <item>fuel</item>
        <item>parking</item>
        <item>registration</item>
        <item>accommodation</item>
        <item>meal</item>
        <item>supplies</item>
    </string-array>
    <string-array name="currencies">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>CNY</item>
    </string-array>

    <string name="title_activity_claim_accept_return">ClaimAcceptReturn</string>
    <string name="title_activity_display_claim_accepted">DisplayClaimAcceptedActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="send">Send</string>
    <string name="accept">Approve</string>
    <string name="_return">Return</string>
    <string name="submit">Submit</string>
    <string name="save">save</string>
    <string name="description_of_expense">Expense Description:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="title_activity_claimant_expense_list">ClaimantExpenseListActivity</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="title_activity_tag_manager">TagManagerActivity</string>
    <string name="title_activity_edit_claim">EditClaimActivity.java</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_approver_expense_list">ApproverExpenseListActivity</string>
    <string name="title_activity_claimant_comment">ClaimantCommentActivity</string>
    <string name="title_activity_approver_claims">Approver Claims</string>
    <string name="title_activity_approver_claim_info">ApproverClaimInfo</string>

</resources>
