<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.kjyoung_expenses.EditExpenseActivity" >

    <Button
        android:id="@+id/saveExpenseButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="saveClick"
        android:text="@string/save" />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/saveExpenseButton" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/categoryHeader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/category"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <Spinner
		        android:id="@+id/categorySelector"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/categoryHeader"
		        android:layout_toRightOf="@+id/categoryHeader"
		        android:layout_toEndOf="@+id/categoryHeader"  
		        />
		
		    <TextView
		        android:id="@+id/descriptionHeader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentStart="true"
		        android:layout_below="@+id/categorySelector"
		        android:text="@string/description"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/descriptionBody"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentStart="true"
		        android:layout_below="@+id/descriptionHeader"
		        android:ems="10" android:inputType="textAutoCorrect">
		
		        <requestFocus />
		    </EditText>
		    
		    <TextView
				        android:id="@+id/expenseDateHeader"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentStart="true"
				        android:layout_below="@+id/descriptionBody"
				        android:text="@string/date"
				        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <DatePicker
				        android:id="@+id/expenseDate"
				        android:calendarViewShown="false"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_below="@+id/expenseDateHeader"
				        android:layout_alignParentLeft="true" 
				        android:layout_alignParentStart="true" />
		
		    <TextView
		        android:id="@+id/currencyHeader"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/descriptionBody"
		        android:layout_alignStart="@+id/descriptionBody"
		        android:layout_below="@+id/expenseDate"
		        android:text="@string/amount"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/currencyBody"
		        android:layout_width="75dp"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/currencyHeader"
		        android:layout_toEndOf="@+id/currencyHeader"
		        android:layout_toRightOf="@+id/currencyHeader"
		        android:ems="10"
		        android:inputType="numberSigned|numberDecimal" />
		
		    <Spinner
		        android:id="@+id/currencySelector"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/currencyBody"
		        android:layout_alignTop="@+id/currencyBody"
		        android:layout_toRightOf="@+id/currencyBody"
		        android:layout_toEndOf="@+id/currencyBody" />
		    
		    <CheckBox
		        android:id="@+id/checkBox1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="25dp"
		        android:layout_below="@+id/currencySelector"
		        android:text="Incomplete" />
		    
		   <ImageButton
		        android:id="@+id/imageButton1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_below="@+id/checkBox1"
		        android:src="@android:drawable/btn_star" />

		   <Button
		       android:id="@+id/button1"
		       style="?android:attr/buttonStyleSmall"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignBottom="@+id/imageButton1"
		       android:layout_toRightOf="@+id/imageButton1"
		       android:text="(-)" />

		   <Button
		       android:id="@+id/button2"
		       style="?android:attr/buttonStyleSmall"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignBottom="@+id/imageButton1"
		       android:layout_toRightOf="@+id/button1"
		       android:text="(+)" />

        </RelativeLayout>
        
    </ScrollView>

    

</RelativeLayout>
